change arch Change-Id: Ie57383a51e0c036599cc8f4831de95c5db4bd243 Signed-off-by: zhuo.wang <zhuo.wang@cs2c.com.cn>